# highwayhash-wasm

./: .eslintrc.js  .gitignore  .npmrc  .prettierrc  README.md  api-extractor.json  commitlint.config.js  eslint.config.js  index.html  jest.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml  release.yaml
docs/: CHANGELOG.md
highway/: Cargo.toml  package.json
highway/benches/: bench.rs
highway/src/: lib.rs
highway/tests/: web.rs
js/: index.ts
js/highway-wasm/: index.d.ts  index.ts  simd.ts
js/highway-wasm/src/: index.d.ts  index.ts  use-key.ts
js/highwayhash-wasm/src/: index.d.ts  index.ts  use-key.ts
scripts/: build  build.ts  dev.ts  esbuild-replace.ts  optimize  preinstall.ts  tsconfig.json  wasm-loader.ts
