[package]
name = "highwayhash"
version = "0.1.0"
authors = [ "asonnleitner <andreassonnleitner@gmail.com>" ]
description = "A wasm game of life implementation"
repository = "https://github.com/asonnleitner/highwayhash-wasm"
license = "MIT"
edition = "2021"

[lib]
crate-type = [
  "cdylib",
  "rlib"
]

[features]
default = [
  "console_error_panic_hook",
  "wee_alloc"
]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

# using the js-sys crate to import the Math.random JavaScript function.
# js-sys = "0.3.56"
web-sys = { version = "0.3.56", features = [ "console" ] }
highway = { version = "0.7.0", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# opt-level = "z"
lto = true
